# play-ground

code-plugin/my-extension/: package-lock.json  package.json
code-plugin/my-extension/src/: extension.ts
golang/greetings/: go.mod  greetings.go
golang/hello/: go.mod  hello.go
golang/tutorial/developing_a_restful_api_with_go_and_gin/web-service-gin/: main.go
golang/tutorial/getting_started_with_go/: README.md
golang/tutorial/getting_started_with_go/greetings/: greetings.go  greetings_test.go
golang/tview-example/: go.mod  main.go  run_cmd.go
llm/llm-jp/: README.md  main.py  pyproject.toml
llm/llm-jp/src/llm_jp/: __init__.py
spike-example/: README.md  history
typst-example/slide-example/: main.typ
