[project]
name = "llm-jp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yosaka", email = "fallingfluit@gmail.com" }
]
dependencies = [
    "transformers>=4.45.1",
    "accelerate>=0.34.2",
    "vllm>=0.6.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_jp"]


# [[tool.rye.sources]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cpu"
# type = "index"
